--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,11 @@ textarea {
 	margin: auto;
 	padding-left: 20px;
 	padding-right: 20px;
+	position: relative;
+}
+
+.ba-container.remove-space{
+	font-size: 0;
 }
 
 /* First section */
@@ -115,6 +120,11 @@ textarea {
 
 header{
 	padding: 2.25rem 0;
+	position: fixed;
+	width: 100%;
+	left: 0;
+	top: 0;
+	z-index: 0;
 }
 
 header nav{
@@ -122,6 +132,7 @@ header nav{
 	vertical-align: middle;
 	width: 75%;
 	text-align: right;
+	
 }
 
 header nav a{
@@ -164,5 +175,37 @@ header ul{
 
 header ul li{
 	display: inline-block;
+}
+
+
+.img-wrap{
+	position: relative;
+}
+
+.img-wrap img{
+	width: 100%;
+	height: auto;
+}
+
+.img-wrap .hover-img{
+	display: none;
+}
+
+.img-wrap:hover .hover-img{
+	display: block;
+	position: absolute;
+	background: rgba(79,186, 116, 0.9);
+	top: 0;
+	left:0;
+	right: 0;
+	bottom: 0;
+	color: #fff;	
+}
+
+.img-wrap .hover-img .hover-text{
+	position: relative;
+	top: 50%;
+	transform: translate(0, -50%);
+	text-align: center;
 }
 
