--- a/css/layout.css
+++ b/css/layout.css
@@ -130,11 +130,12 @@ img {
 
 .ba-grid > [class*="ba-width-"] {
     float: left;
-    padding-left: 20px;
+    font-size: 1rem;
+    padding: 1rem;
 }
 
 .ba-grid {
-    margin-left: -20px;
+/*    margin-left: -20px;*/
 }
 
 
@@ -156,14 +157,10 @@ img {
 
 .ba-width-1-3, .ba-width-2-6 {
     width: 33.333%;
-    display: inline-block;
-    font-size: 1rem;
 }
 
 .ba-width-2-3, .ba-width-4-6 {
     width: 66.667%;
-    display: inline-block;
-    font-size: 1rem;
 }
 
 .ba-width-1-4 {
