--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ textarea {
 }
 
 .ba-container.remove-space{
-	font-size: 0;
+	/*font-size: 0;*/
 }
 
 /* First section */
@@ -120,11 +120,11 @@ textarea {
 
 header{
 	padding: 2.25rem 0;
-	position: fixed;
+	/*position: fixed;*/
 	width: 100%;
 	left: 0;
 	top: 0;
-	z-index: 0;
+	z-index: 1;
 }
 
 header nav{
@@ -132,6 +132,7 @@ header nav{
 	vertical-align: middle;
 	width: 75%;
 	text-align: right;
+	float: right;
 	
 }
 
@@ -180,18 +181,21 @@ header ul li{
 
 .img-wrap{
 	position: relative;
+	border-radius: 10px;
 }
 
 .img-wrap img{
 	width: 100%;
-	height: auto;
+	height: 100%;
+	border-radius: 10px;
 }
 
-.img-wrap .hover-img{
+/*Hover эффект с ипользованием display*/
+.img-wrap.use-display .hover-img{
 	display: none;
 }
 
-.img-wrap:hover .hover-img{
+.img-wrap.use-display:hover .hover-img{
 	display: block;
 	position: absolute;
 	background: rgba(79,186, 116, 0.9);
@@ -199,7 +203,73 @@ header ul li{
 	left:0;
 	right: 0;
 	bottom: 0;
+	border-radius: 10px;
 	color: #fff;	
+}
+
+/* Hover эффект с ипользованием opacity */
+.img-wrap.use-opacity .hover-img{
+	position: absolute;
+	top: 0;
+	left:0;
+	right: 0;
+	bottom: 0;
+	/*z-index нужен для того что бы hover эффект не накладывался на изображение когда его не видно*/
+	z-index: -1;
+	opacity: 0;
+	transition: opacity 0.5s ease;
+}
+
+.img-wrap.use-opacity:hover .hover-img{
+	background: rgba(79,186, 116, 0.9);
+	z-index: 1;
+	opacity: 1;
+	border-radius: 10px;
+	color: #fff;
+}
+
+/* Hover эффект с ипользованием transform:scale */
+.img-wrap.use-scale .hover-img{
+	position: absolute;
+	top: 0;
+	left:0;
+	right: 0;
+	bottom: 0;
+	/*Делаем блок с нулевой высотой и шириной*/
+	transform: scale(0);
+	transition: all 0.5s ease;
+}
+
+.img-wrap.use-scale:hover .hover-img{
+	background: rgba(79,186, 116, 0.9);
+	border-radius: 10px;
+	transform: scale(1);
+	color: #fff;
+}
+
+/* Hover эффект с ипользованием transform:translate */
+.img-wrap.use-translate{
+	/*Что бы опущенный вниз ховер эффект не был виден*/
+	overflow: hidden;
+}
+
+.img-wrap.use-translate .hover-img{
+	position: absolute;
+	top: 0;
+	left:0;
+	right: 0;
+	bottom: 0;
+	/*Опускаем блок с ховер эффектом вниз за пределы изображения */
+	transform: translate(0, 100%);
+
+	transition: all 0.5s ease;
+}
+
+.img-wrap.use-translate:hover .hover-img{
+	background: rgba(79,186, 116, 0.9);
+	border-radius: 10px;
+	transform: translate(0, 0);
+	color: #fff;
 }
 
 .img-wrap .hover-img .hover-text{
